--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ p {
 
 /* Ratings */
 
-ul.rating {
+.rating {
   display: block;
   clear: both;
   list-style-type: none;
@@ -156,7 +156,7 @@ ul.rating {
   height: 60px;
 }
 
-li.star {
+.star {
   display: block;
   float: left;
   background: url(../img/star-gray.png) no-repeat center;
@@ -167,15 +167,15 @@ li.star {
   overflow: hidden;
 }
 
-ul.stars-1 li:first-child{
+.stars-1 li:first-child{
   background: url(../img/star.png) no-repeat center;
 }
 
-ul.stars-2 li:nth-child(-n+2){
+.stars-2 li:nth-child(-n+2){
   background: url(../img/star.png) no-repeat center
 }
 
-ul.stars-3 li:nth-child(-n+3){
+.stars-3 li:nth-child(-n+3){
   background: url(../img/star.png) no-repeat center
 }
 
