--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ p {
   display: block;
   overflow: hidden;
   margin: 20px auto 20px auto;
-  width: 600px;
+  max-width: 600px;
   background-color: rgba(0, 0, 0, 0.12);
 }
 
@@ -80,9 +80,10 @@ p {
 .deck {
   display: block;
   overflow: hidden;
-  width: 600px;
-  padding: 10px;
-  margin: 0 auto;
+  max-width: 600px;
+  width: 100%;
+  padding: 10px 0;
+  margin: 0 auto 50px auto;
   background-image: url(../img/deck-bg.png);
   background-position: center;
   background-repeat: repeat;
@@ -95,16 +96,23 @@ p {
   overflow: hidden;
   float: left;
   width: 140px;
+  max-width: 21%;
   height: 140px;
+  max-height: 21%;
   padding: 0;
-  margin: 5px;
+  margin: 5px 2%;
   border-radius: 5px;
   background: url(../img/england-badge.png) no-repeat center;
   cursor: pointer;
+  text-align: center;
 }
 
 .card > img {
   display: none;
+  width: auto;
+  max-width: 100%;
+  height: 140px;
+  max-height: 100%;
 }
 
 .card.open > img {
